--- a/src/Vista/frmActualizarContra.form
+++ b/src/Vista/frmActualizarContra.form
@@ -130,10 +130,10 @@
         <Component class="javax.swing.JPasswordField" name="txtContrasenia">
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder>
+              <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
+                <LineBorder>
                   <Color PropertyName="color" blue="99" green="ff" red="99" type="rgb"/>
-                </TitledBorder>
+                </LineBorder>
               </Border>
             </Property>
           </Properties>
