--- a/src/Vista/frmSillas.form
+++ b/src/Vista/frmSillas.form
@@ -482,7 +482,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Label-Silla"/>
+            <Property name="text" type="java.lang.String" value="Label-Zona"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
